Freedom Sanbox Ant Deploy/src/objects/Renewal_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Number__c</fullName>
        <label>Cheque Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Submission_date__c</fullName>
        <label>Cheque Submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Renewal_Trackers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Execution_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Tracker</label>
        <referenceTo>Execution_Tracker__c</referenceTo>
        <relationshipName>Renewal_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insurance_Type__c</fullName>
        <label>Insurance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_renewal_date__c</fullName>
        <label>Next renewal date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentId</label>
        <referenceTo>Renewal_Tracker__c</referenceTo>
        <relationshipName>Renewal_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Tracker_Name__c</fullName>
        <label>Renewal Tracker Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Revenue__c</fullName>
        <label>Target Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tenure_of_Insurance__c</fullName>
        <label>Tenure of Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isNewRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNewRenewal</label>
        <type>Checkbox</type>
    </fields>
    <label>Renewal Tracker</label>
    <nameField>
        <displayFormat>RT-{0000000}</displayFormat>
        <label>Renewal Tracker Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ChequeSubmissionDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Cheque_Submission_date__c),NOT(ISBLANK(Target_Revenue__c)))</errorConditionFormula>
        <errorDisplayField>Cheque_Submission_date__c</errorDisplayField>
        <errorMessage>Please Enter Cheque Submission Date once Target Revenue is entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GreaterChequeSubmissionDate</fullName>
        <active>true</active>
        <errorConditionFormula>Cheque_Submission_date__c &lt; Next_renewal_date__c</errorConditionFormula>
        <errorDisplayField>Cheque_Submission_date__c</errorDisplayField>
        <errorMessage>Cheque Submission Date should be greater than Next Renewal Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_Revenue</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(NOT(ISBLANK(Cheque_Submission_date__c)),Cheque_Submission_date__c &gt;=  Next_renewal_date__c),ISBLANK(Target_Revenue__c))</errorConditionFormula>
        <errorDisplayField>Target_Revenue__c</errorDisplayField>
        <errorMessage>Please enter Target Revenue once Cheque Submission date is entered</errorMessage>
    </validationRules>
</CustomObject>